--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript" src="../assets/home.js"></script>
     <link rel="stylesheet" href="../assets/home.css">
-    <title>Fernion</title>
+    <title>Novovu V2</title>
   </head>
   <body id="content">
     <nav class="navbar navbar-expand-lg navbar-light">
