made working check if logged in system

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,7 +11,7 @@
     <title>Novovu V2</title>
 </head>
 
-<form action="/register" method="POST" class="form rounded">
+<form action="/register" method="post" class="form rounded">
     <h1 class="title">Register</h1>
     <div class="mb-3">
         <label for="username" class="form-label">Username</label>
