--- a/views/register.ejs
+++ b/views/register.ejs
@@ -15,7 +15,7 @@
     <h1 class="title">Register</h1>
     <div class="mb-3">
         <label for="username" class="form-label">Username</label>
-        <input type="text" class="form-control" id="username">
+        <input type="text" class="form-control" id="username" name="username">
     </div>
     <div class="mb-3">
         <label for="email" class="form-label">Email address</label>
