--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,21 +11,16 @@
     <title>Novovu V2</title>
 </head>
 
-<form action="/register" method="post" class="form rounded">
-    <h1 class="title">Register</h1>
+<form action="/login" method="post" class="form rounded">
+    <h1 class="title">Login</h1>
     <div class="mb-3">
         <label for="username" class="form-label">Username</label>
         <input type="text" class="form-control" id="username" name="username">
-    </div>
-    <div class="mb-3">
-        <label for="email" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email">
-        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
     </div>
     <div class="mb-3">
         <label for="password" class="form-label">Password</label>
         <input type="password" class="form-control" id="password" name="password">
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
-    <p class="login">Already a member? <a href="/login">Log In</a>!</p>
+    <p class="login">Do not have an account? <a href="/register">Sign Up</a>!</p>
 </form>
