--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,37 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script type="text/javascript" src="../assets/home.js"></script>
-    <link rel="stylesheet" href="../assets/home.css">
-    <title>Novovu V2</title>
-  </head>
-  <body id="content">
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <div class="container-fluid"><a class="navbar-brand" href="#"><img class="logo" id="logo" src="https://pbs.twimg.com/profile_images/1100594156718702593/_p_SyfuH_400x400.png"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item" id="horizontal_text"><a class="nav-link" href="#">Home</a></li>
-            <li class="nav-item" id="horizontal_text"><a class="nav-link" href="#">Games</a></li>
-            <li class="nav-item" id="horizontal_text"><a class="nav-link" href="#">Shop</a></li>
-            <li class="nav-item" id="horizontal_text"><a class="nav-link" href="#">Forum</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+  <%- include("layout/head") %> 
+  <body>
+    <%- include("layout/nav") %> 
     <p class="welcome">Welcome, <%= user %>!</p>
-    <nav class="navbar" id="sidebar">
-      <ul class="nav navbar-nav">
-        <li class="nav-item" id="vertical_text"><a class="nav-link" href="#">Events</a></li>
-        <li class="nav-item" id="vertical_text"><a class="nav-link" href="#">Friends</a></li>
-      </ul>
-    </nav>
     <div class="container-sm position-absolute rounded" id="update">
       <form action="/message" method="post" class="form rounded">
         <h3 class="title">Messages</h3>
@@ -39,7 +11,7 @@
             <label for="username" class="form-label">Send a message</label>
             <input type="text" class="form-control" id="message" name="message" required>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn-primary">Submit</button>
           <p>
             <% messages.forEach(message => { %>
               <%= message.whosent.username %>: <%= message.messages %> <br> 
